# Market_tochka

./: .gitignore  DockerFile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  rabbitmq.conf
Public_service/: pyproject.toml
Public_service/app/: main.py
Public_service/app/api/: dependencies.py  router.py  schemas.py  service.py
admin_service/: pyproject.toml
admin_service/app/: main.py
admin_service/app/api/: dependencies.py  router.py  schemas.py  service.py
alembic/: env.py
alembic/versions/: 2025_03_22_0125-e4cc7a1523b5_create_users_table.py
api_gateway/: Dockerfile  auth_check.py  config.py  main.py  pyproject.toml
api_gateway/app/: auth_check.py  config.py  main.py
api_gateway/app/producers/: base_producer.py  instrument_delete_producer.py  user_delete_producer.py
api_gateway/app/routes/: balance_router.py  order_router.py  users_router.py
api_gateway/app/schemas/: balance_DTO.py  instruments_DTO.py  orders_DTO.py  users_DTO.py
api_gateway/routes/: users_router.py
api_gateway/schemas/: users_DTO.py
balance_service/: entrypoint.sh  pyproject.toml
balance_service/alembic/: env.py
balance_service/app/: config.py  main.py
balance_service/app/alembic/: env.py
balance_service/app/api/: dependencies.py  (+2 more)
order_service/: Dockerfile  pyproject.toml
order_service/app/: config.py  database.py  httpx_helper.py  main.py  saga_manager.py
order_service/app/alembic/: env.py
order_service/app/alembic/versions/: 2025_05_18_2313-b49fcdd00cfd_create_orders_table.py  2025_05_20_2108-84b1a9370d62_add_reserved_value_column.py
order_service/app/api/: dependencies.py  router.py  schemas.py  service.py
order_service/app/consumers/: balance_events_consumer.py  instrument_delete_consumer.py  order_consumer.py  user_delete_consumer.py
order_service/app/models/: __init__.py  orders.py
order_service/app/producers/: balance_producer.py  get_balance_producer.py  order_producer.py
services/Public_service/: auth.py  router.py  service.py
services/admin_service/: dependencies.py  router.py  service.py
services/order_service/: dependencies.py  router.py  schemas.py  service.py
shared/: database.py  pyproject.toml
shared/alembic/: env.py
shared/core/: auth.py  config.py  database.py
shared/models/: Users.py  transactions.py
src/: main.py
src/alembic/: env.py
src/api/: __init__.py
src/api_v1/: __init__.py
src/core/: config.py  database.py  models.py
user_service/: .dockerignore  Dockerfile  pyproject.toml
user_service/app/: config.py  database.py  main.py
(+76 files in other folders)
