[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["Александр <av.sanya@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
sqlalchemy = {extras = ["async"], version = "^2.0.40"}
pyjwt = "^2.10.1"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
