[tool.poetry]
name = "order_service"
version = "0.1.0"
description = ""
authors = ["Александр <av.sanya@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
pydantic = {extras = ["email"], version = "^2.10.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"
shared = { path = "../shared", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"