[tool.poetry]
name = "order_service"
version = "0.1.0"
description = ""
authors = ["Александр <av.sanya@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
sqlalchemy = {extras = ["async"], version = "^2.0.40"}
uvicorn = "^0.34.2"
pydantic-settings = "^2.9.1"
aio-pika = "^9.5.5"
asyncpg = "^0.30.0"
psycopg = "^3.2.6"
psycopg-binary = "^3.2.6"
alembic = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
